[WIP] 1.0.2
- Reverted back to the original Artificial texture due to the new one sadly not scaling well on larger worlds (a fixed version might be re-added in the future).
- Updated icon colors for unique planets.
- AddConditionIfNeeded and RemoveConditionIfNeeded functions are now public for anyone using Unknown Skies for custom systems.

1.0.1
- Updated for 0.97a
- Added a new Artificial planet texture courtesy of Draconis13 (dev note: this change was reverted in 1.0.2).
- Unique planets and conditions can no longer spawn in the Abyss.
- Parasitic Spores can no longer rarely spawn on Magnetic worlds.
- Planets with Military Virus will always have at least Widespread Ruins.
- Artificial planets will always have at least Extensive Ruins.
- US_gas_giant is now appropriately labeled as an Ice Giant.
- Military Virus' description now mentions its stability debuff.
- Renamed "Windy Arid" to "Windswept".
- Fixed "a Archipelago" typo.
- Fixed a few special conditions breaking if removed.
- Externalized Military Virus strings (which for some reason weren't already).
- Removed many unused files, assets and code.
- The ChangePlanetType function is now public for anyone using Unknown Skies for custom systems.
- Added a few loading tips.

--------------------------
--- ORIGINAL CHANGELOG ---
--------------------------

1.0

[RC2] 
- Fixed Underground Tunnels tooltip.
- Added save patching code to re-assign the new backgrounds to existing systems. 
 > Interestingly, this means US can be added mid-playthrough and it will add the new backgrounds.

[RC1]

- Reworked backgrounds: 
   . Now includes 69 backdrops (from 27),
   . They are somewhat more consistent in art-style and darker as to not disrupt gameplay.

- Background list can be expanded through modSettings.json entries with third-party sub-mods,
- All strings have been externalized for ease of translation,